--- a/main.html
+++ b/main.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shopping Cart</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .block-heading {
+      color: #3b99e0;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .product {
+      margin-bottom: 20px;
+    }
+    .summary {
+      background-color: #f7fbff;
+      border-top: 2px solid #5ea4f3;
+      padding: 20px;
+    }
+    .summary .btn {
+      background-color: #3b99e0;
+      color: #fff;
+    }
+    .summary .btn:hover {
+      background-color: #337ab7;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container">
+    <h2 class="block-heading">Shopping cart</h2>
+    <p class="text-center">The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to be in possession of property.</p>
 
+    <div class="row">
+      <div class="col-lg-8">
+        <!-- Product Block -->
+        <div class="product row">
+          <div class="col-md-3">
+            <img src="https://images.unsplash.com/photo-1577012325504-110f8df056c9?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Product" class="img-fluid">
+          </div>
+          <div class="col-md-6">
+            <h6>I am very sorry</h6>
+            <p>Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</p>
+          </div>
+          <div class="col-md-3 text-end">
+            <input type="number" value="0" class="form-control mb-2">
+            <p>$120</p>
+          </div>
+        </div>
+
+        <div class="product row">
+          <div class="col-md-3">
+            <img src="https://images.unsplash.com/photo-1577012325504-110f8df056c9?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Product" class="img-fluid">
+          </div>
+          <div class="col-md-6">
+            <h6>I am very sorry</h6>
+            <p>Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</p>
+          </div>
+          <div class="col-md-3 text-end">
+            <input type="number" value="1" class="form-control mb-2">
+            <p>$120</p>
+          </div>
+        </div>
+
+        <div class="product row">
+          <div class="col-md-3">
+            <img src="https://images.unsplash.com/photo-1577012325504-110f8df056c9?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Product" class="img-fluid">
+          </div>
+          <div class="col-md-6">
+            <h6>I am very sorry</h6>
+            <p>Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</p>
+          </div>
+          <div class="col-md-3 text-end">
+            <input type="number" value="1" class="form-control mb-2">
+            <p>$120</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="summary">
+          <h5>Summary</h5>
+          <p>Subtotal: $360</p>
+          <p>Discount: $0</p>
+          <p>Shipping: $0</p>
+          <p>Total: $360</p>
+          <button class="btn btn-primary w-100">Checkout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
