--- a/main.html
+++ b/main.html
@@ -30,9 +30,9 @@
 </head>
 <body>
   <div class="container">
-    <h2 class="block-heading">Shopping cart</h2>
+    <h2 class="block-heading p">Shopping cart</h2>
     <p class="text-center">The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to be in possession of property.</p>
-
+    <a href="#">
     <div class="row">
       <div class="col-lg-8">
         <!-- Product Block -->
