--- a/main.html
+++ b/main.html
@@ -81,7 +81,7 @@
 
       <div class="col-lg-4">
         <div class="summary">
-          <h5>Summary</h5>
+          <h5 class="block-heading p">Summary</h5>
           <p>Subtotal: $360</p>
           <p>Discount: $0</p>
           <p>Shipping: $0</p>
